--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,9 @@
 qtimageformats-opensource-src (5.11.3-2) UNRELEASED; urgency=medium
 
+  [ Lisandro Damián Nicanor Pérez Meyer ]
+  * Note that the previous upload fixes CVE-2018-19871: QImage: QTgaFile CPU
+    exhaustion.
+
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Thu, 13 Dec 2018 19:02:38 -0300
 
 qtimageformats-opensource-src (5.11.3-1) experimental; urgency=medium
